4 Aug 1997  Jim Kingdon

	Changes for Visual C++ 5.0:
	* SCC.dsp: New file.
	* .cvsignore: add SCC.dsw SCC.opt SCC.plg Release.

	* scc.c (SccGet): Replace #if 0'd code with a comment and
	adjust to avoid compiler warning.

Mon Aug  4 09:58:11 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* scc.c: Split out the interface declarations into a new file
	pubscc.h.  This should make it easier to handle multiple
	scc.c-equivalents.

Mon Jul 14 15:58:25 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* scc.c: Add many comments and defines to document additional
	aspects of the SCC API.

7 Jul 1997  Frederic Van Haren  <Frederic.Van.Haren@lhs.be>

	* scc.c (SccHistory): file_names is LPSTR * not LPSTR.

Mon Jul  7 16:45:16 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* scc.c (SccGetVersion): Change arguments from () to (void).
	Clarify context_arg.  Also document 'window' arg.

Sat Jul  5 13:01:51 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README.txt: PowerJ and Power++ are also said to implement SCC.

21 Mar 1997  Jim Kingdon

	* scc.c (SccCheckout): Write to debuglog and return
	-11 instead of -14.  I though maybe that this may be
	related to the crashes I've been seeing, but those
	crashes persisted when I deinstalled the SCC DLL.

14 Mar 1997  Jim Kingdon

	* scc.c: Go back to using debuglog not outproc for
	most debugging messages.  Developer Studio tends to
	erase the outproc messages on an error.
	More playing around with projects.
	* README.txt: Describe results of this.  I am making
	grey (source controlled) file icons appear, which is
	exciting.

4 Mar 1997  Jim Kingdon

	Still some distance from being able to open a
	project, but that's what I'm playing with:
	* scc.c (SccOpenProject): Use outproc not debuglog
	for debugging messages.
	(SccGet): Add debugging messages.
	(SccAddFromScc): Implemented.
	(SccInitialize): Return AddFromScc in capabilities.
	* scc.c: Change out_proc to outproc for consistency.

2 Mar 1997  Jim Kingdon
