@@ -1,3 +1,10 @@
+Mon Aug  4 10:46:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* pubscc.h: Add comment listing new CodeWright 5.00c functions.
+	Add comment about CodeWright calling SccQueryInfo without
+	SCC_cap_QueryInfo set.  Thanks to Frederic Van Haren for
+	pointing out these issues.
+
 4 Aug 1997  Jim Kingdon
 
 	Changes for Visual C++ 5.0:
